# CITIfile

./: CITIfile.py  README.md  pyproject.toml
.github/workflows/: python-publish.yml
src/: __init__.py
